gnlcomposition: fix a bug figuring out the segments.

If we have two sources (with no default sources) laid out like this:
    [  source1         ]
               [   source2   ]

We need to configure 3 different segments and therefore build 3 different
stacks. One in which only source1 is active, one in which both source1 and

source2 are active and finally one in which only source2 is active.

https://bugzilla.gnome.org/show_bug.cgi?id=609792